# Controlry

./: .gitignore  license  readme.md
Backend/: CMakeLists.txt  readme.md
Backend/Tools/include/: ui.h
Backend/Tools/src/: ui.cpp
Backend/User/include/: MotorControl.h  PidController.h  debug.h
Backend/User/src/: MotorControl.cpp  PidController.cpp  debug.cpp
Backend/example/: main.cpp  test.cpp
Backend/include/: motor.h  motor_com.h  motor_manager.h
Backend/src/: motor.cpp  motor_com.cpp  motor_manager.cpp
Frontend/GM6020Sim/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  GM6020Sim.sln
Frontend/GM6020Sim/Assets/: RM_Ground.mat
Frontend/GM6020Sim/Assets/Models/: GM6020.fbx
Frontend/GM6020Sim/Assets/Scenes/: SampleScene.unity
Frontend/GM6020Sim/Assets/Scenes/Materials/: OIP.mat  Roselia_14th_SG_BD.mat  地胶.mat  背景.mat
Frontend/GM6020Sim/Assets/Scripts/: MotorCom.cs  MotorSim.cs  MotorUI.cs  PCFingerPrint.cs  main.cpp
Frontend/GM6020Sim/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Frontend/GM6020Sim/ProjectSettings/: ProjectSettings.asset
